@@ -39,7 +39,7 @@ public class RestExceptionHandler extends ResponseEntityExceptionHandler {
         var errors = ex.getConstraintViolations()
                 .stream()
                 .map(violation -> violation.getRootBeanClass().getName() + " " + violation.getPropertyPath() + ": " + violation.getMessage())
-                .collect(Collectors.toList());
+                .toList();
 
         var apiErrorDto = new ApiErrorDto(HttpStatus.BAD_REQUEST, "Constraint Violation", errors);
         return new ResponseEntity<>(apiErrorDto, apiErrorDto.getStatus());
